<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="35sp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:text="@string/hello" 
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="center"  />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:text="@string/space" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:gravity="center"
        android:text="@string/about_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:gravity="center"
        android:text="@string/about_ack"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:gravity="center"
        android:text="@string/about_version"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:text="@string/space" />
       
	<Button
        android:id="@+id/about_back_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/back"
		android:textSize="35sp"  />
    
</LinearLayout>