<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/textView3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_name"
		android:textSize="35sp"
		android:textStyle="bold" />

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight=".6"
		android:gravity="center"
		android:text="@string/hello"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<Button
		android:id="@+id/home_login_button"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:text="@string/home_login"
		android:textSize="35sp" />

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight=".15"
		android:text="@string/space" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight=".15"
		android:text="@string/space" />

	<Button
		android:id="@+id/home_about_button"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight=".5"
		android:text="@string/home_about"
		android:textSize="35sp" />

</LinearLayout>