<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="35sp"
        />

        <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".08"
        android:text="@string/space" />
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".03"
        android:gravity="center"
        android:text="@string/login_uname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".02"
        android:text="@string/space" />
       
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".03"
        android:gravity="center"
        android:text="@string/login_pass"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />
        <Button android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_login"
        />
    </LinearLayout>
    
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:text="@string/space" />
    
</LinearLayout>